Add PHP-CS-Fixer and apply style fixes

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -3,8 +3,12 @@ services:
 ###> doctrine/doctrine-bundle ###
   database:
     ports:
-      - "5432"
+      - "3306:3306"
 ###< doctrine/doctrine-bundle ###
+
+  phpmyadmin:
+    ports:
+      - "8888:80"
 
 ###> symfony/mailer ###
   mailer:
