--- a/composer.json
+++ b/composer.json
@@ -98,6 +98,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.92",
         "phpunit/phpunit": "^12.5",
         "symfony/browser-kit": "8.0.*",
         "symfony/css-selector": "8.0.*",
